# ai-text-outline

./: CHANGELOG.md  PYPI_PUBLISH_GUIDE.md  README.md  UPLOAD_NOW.md  extraction_result.json  final_test_result.json  pyproject.toml  setup.cfg  toc_inspect.txt
.claude/: settings.local.json
.github/workflows/: CI.yml
src/ai_text_outline/: __init__.py  _config.py  _extract.py  _index_finder.py  _llm.py  _page_utils.py  _pages.py  _prompt.py  _toc_llm.py  _toc_regex.py
tests/: conftest.py  test_config.py  test_index_finder.py  test_integration.py  test_llm.py  test_page_utils.py  test_prompt.py  test_toc_regex.py
tests/data/: test.txt
