[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_text_outline"
version = "0.4.0"
authors = [
  { name="OpenPecha", email="dev@openpecha.org" },
]
description = "Extract Table of Contents from Tibetan texts and return section start indices"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "google-genai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
]

[project.urls]
"Homepage" = "https://github.com/OpenPecha/ai-text-outline"
"Bug Tracker" = "https://github.com/OpenPecha/ai-text-outline/issues"
